--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
   </body>
+  <footer class="footer">
+    <div class="footer__container">
+      <span class="text">D&D by Vladislav Shatilenya, 2018</span>
+    </div>
+  </footer>
 </html>
